Fix canvas being shifted to the left (now it displays center like it should)

--- a/src/public/css/web.css
+++ b/src/public/css/web.css
@@ -187,3 +187,7 @@ h6 {
     transition: all .2s ease;
     cursor: pointer;
 }
+
+.canvas-container {
+    margin: auto;
+}
